--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <meta http-equiv="Content-Type" content="text/html">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <link rel="shortcut icon" type="image/png" href="http://localhost/public/favicon.ico"/>
+        <link rel="shortcut icon" type="image/png" href="http://192.168.100.170/public/favicon.ico"/>
         <title>Министерство сельского хозяйства и природных ресурсов ПМР</title>
     </head>
     <body>
