General routing system

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <base href="/" />
         <meta name="description" content="Free e-book reader web-based application for mobi and epub formats">
         <meta name="keywords" content="ebook, e-book, reader, webapp, application, web-application, kwt, kwt reader, e-book reader">
         <meta name="author" content='knownOut "re-knownout" knownout@hotmail.com'>
